<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.CoinActivity">

        <View
            android:id="@+id/blue_background"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_blue_bottom_50"
            app:layout_constraintBottom_toBottomOf="@id/spacer"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:trackColor="@android:color/white"
            app:indicatorColor="@color/purple_700"
            android:elevation="10dp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/my_dashboard_text"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:text="@string/my_dashboard"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/user_image"
            app:layout_constraintEnd_toStartOf="@+id/search_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_1"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="15dp"
            app:cardBackgroundColor="#6571EA"
            app:layout_constraintEnd_toStartOf="@id/card_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/my_dashboard_text">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/title"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/scan"
                    android:textColor="@android:color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Scan" />

                <ImageView
                    android:id="@+id/arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_baseline_arrow_forward_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@android:color/white" />

                <TextView
                    android:id="@+id/message"
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/lorem"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_2"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            app:cardBackgroundColor="#6571EA"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/card_1"
            app:layout_constraintTop_toBottomOf="@id/my_dashboard_text">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/title_2"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/scan"
                    android:textColor="@android:color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Scan" />

                <ImageView
                    android:id="@+id/arrow_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_baseline_arrow_forward_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@android:color/white" />

                <TextView
                    android:id="@+id/message_2"
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/lorem"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_2" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <View
            android:id="@+id/spacer"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:layout_constraintTop_toBottomOf="@id/card_1" />

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:src="@drawable/user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/mail_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_baseline_mail_outline_24"
            app:layout_constraintBottom_toBottomOf="@id/user_image"
            app:layout_constraintEnd_toStartOf="@id/user_image"
            app:layout_constraintTop_toTopOf="@id/user_image" />


        <ImageView
            android:id="@+id/notification_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_baseline_notifications_24"
            app:layout_constraintBottom_toBottomOf="@id/user_image"
            app:layout_constraintEnd_toStartOf="@id/mail_icon"
            app:layout_constraintTop_toTopOf="@id/user_image" />

        <ImageView
            android:id="@+id/search_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_round_search_24"
            app:layout_constraintBottom_toBottomOf="@id/user_image"
            app:layout_constraintEnd_toStartOf="@id/notification_icon"
            app:layout_constraintTop_toTopOf="@id/user_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_stroke_5"
            android:paddingHorizontal="5dp"
            android:paddingVertical="2dp"
            android:text="@string/_30_coins"
            android:textColor="@android:color/white"
            android:textSize="8dp"
            app:layout_constraintBottom_toBottomOf="@id/user_image"
            app:layout_constraintEnd_toEndOf="@id/user_image"
            app:layout_constraintStart_toStartOf="@id/user_image"
            app:layout_constraintTop_toBottomOf="@id/user_image" />

        <TextView
            android:id="@+id/available_msg"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/available_to_buy"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/blue_background" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="@string/see_all"
            android:textColor="@color/purple_200"
            app:layout_constraintBottom_toBottomOf="@+id/available_msg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/available_msg" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/coin_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/bottom_nav"
            app:layout_constraintTop_toBottomOf="@id/available_msg"
            app:spanCount="3" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_nav"
            android:layout_width="match_parent"
            app:menu="@menu/bottom_nav_menu"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>